# ase

./: .gitignore  README.md
practical/class_1/button_w_led/: CMakeLists.txt  sdkconfig.defaults
practical/class_1/button_w_led/application/Gpio/: CMakeLists.txt
practical/class_1/button_w_led/core/: CMakeLists.txt
practical/class_1/button_w_led/core/Include/: main.h
practical/class_1/button_w_led/core/Src/: main.c
practical/class_2/7-segment_displays/: CMakeLists.txt
practical/class_2/7-segment_displays/core/: CMakeLists.txt
practical/class_2/7-segment_displays/core/Include/: main.h
practical/class_2/7-segment_displays/core/Src/: main.c
practical/class_3/7-segment_displays_timers/: CMakeLists.txt
practical/class_3/7-segment_displays_timers/application/Gpio/: Gpio.c  Gpio.h
practical/class_3/7-segment_displays_timers/core/: CMakeLists.txt
practical/class_3/7-segment_displays_timers/core/Include/: main.h
practical/class_3/7-segment_displays_timers/core/Src/: main.c
practical/class_4/test_timers/: CMakeLists.txt  sdkconfig
practical/class_5/temp_sensor-tc74/: CMakeLists.txt
practical/class_5/temp_sensor-tc74/main/: main.c
practical/class_6/tc74_device_driver/: CMakeLists.txt
practical/class_6/tc74_device_driver/driver/: TempSensorTC74.c
practical/class_6/tc74_device_driver/driver/TempSensorTC74/: CMakeLists.txt  TempSensorTC74.c  TempSensorTC74.h
practical/class_6/tc74_device_driver/main/: CMakeLists.txt  main.c
